--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -34,6 +34,9 @@
      #ContainerUser .GBox {
         background-color: #eee;
      }
+    #password-strength {
+	left: 0em;
+    }
   </style>
 
 <script language='javascript'>
@@ -100,44 +103,54 @@
 
     <fieldset id="tab_login" class="wrapper with-background">
       <legend><%= _("Login Settings") %></legend>
-      <div>
-        <p>
+	<table>
+	<tr><td>
           <div class="label"><%=_("Full Name")%></div>
+	</td><td>
           <%= f.text_field :cn , :disabled => disabled, :onblur => "propose_login(this.parentNode.parentNode);" %>
-        </p>
-        <p>
+	</td></tr>
+
+	<tr><td>
           <div class="label"><%=_("Login Name")%></div>
+	</td><td>
           <%= f.text_field :uid, :disabled => disabled, :onblur => "$('#userForm').validate().element('#user_uid') && propose_home(this.parentNode.parentNode.parentNode);", :class => "required" %>
           <%= f.text_field :id, :class => "hidden" %>
-        </p>
-        <p>
+	</td></tr>
+
+	<tr><td>
           <div class="label"><%=_("Password")%></div>
+	</td><td>
           <%= f.password_field :user_password, :onkeyup => "$('#userForm').validate().element('#user_user_password');", :disabled => disabled %>
-        </p>
-        <p>
+	</td></tr>
+
+	<tr><td>
           <div class="label"><%=_("Confirm Password")%></div>
+	</td><td>
           <%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password", :onkeyup => "$('#userForm').validate().element('#user_user_password2');" %>
-        </p>
         <!-- this is a pre-generated placeholder for the validation messages -->
-        <p><div class="label" for="administrator_confirm_password" generated="true" class="error"></div></p>
-      </div>
+        <div class="label" for="administrator_confirm_password" generated="true" class="error"></div>
+	</td></tr>
+	</table>
     </fieldset>
 
     <fieldset id="tab_groups" class="wrapper with-background">
       <legend><%=_("Groups")%></legend>
-      <div>
-        <p>
+	<table>
+	<tr><td>
             <div class="label"><%=_("Groups")%></div>
+	</td><td>
             <%= f.text_field :grp_string, :disabled => disabled, :onkeyup => "groups_validation();" %>
             <a href="#" class="button" onClick="open_groups_dialog();return false;">Manage Groups</a>
-        </p>
-        <p><div class="label" id="groups-error" class="error"></div></p>
-        <p>
+        <div class="label" id="groups-error" class="error"></div>
+	<td></tr>
+
+	<tr><td>
             <div class="label"><%=_("Default Group")%></div>
+	</td><td>
             <%= f.text_field :groupname, :disabled => disabled %>
             <a href="#" class="button" onClick="open_def_group_dialog();return false;">Select Default Group</a>
-        </p>
-   
+	<td></tr>
+	</table>
 	 <div id="groups" style="display:none;" title="Groups">
 	    <div>
 	     <div class="GContainerUser" style="width: 100px;" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </div>
@@ -150,27 +163,30 @@
 	     <div class="GContainerGroups" style="width: 400px;" id="ContainerDefaultGroup" onclick="selectItem(event);"> </div>
 	    </div>
 	 </div>
-
-      </div>
     </fieldset>
 
     <fieldset id="tab_advanced" class="wrapper with-background">
       <legend><%= _("Advanced") %></legend>
-      <div>
-        <p>
+	<table>
+	<tr><td>
             <div class="label"><%=_("Home Directory")%></div>
+	</td><td>
             <%= f.text_field :home_directory, :disabled => disabled %>
-        </p>
-        <p>
+	<td></tr>
+
+	<tr><td>
             <div class="label"><%=_("Login Shell")%></div>
+	</td><td>
             <%= f.text_field :login_shell, :disabled => disabled %>
-        </p>
-        <p>
+	<td></tr>
+
+	<tr><td>
             <div class="label"><%=_("UID Number")%></div>
+	</td><td>
             <%= f.text_field :uid_number, :disabled => disabled, :min => 1000, :class => "number", :onkeyup => "$('#userForm').validate().element('#user_uid_number');"  %>
-        </p>
-        <p><div class="label" id="uid-error" class="error"></div><p>
-      </div>
+        <div class="label" id="uid-error" class="error"></div>
+	<td></tr>
+	</table>
     </fieldset>
 
   </div>
