use Cancel instead of Back (bnc#593348)

--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -187,7 +187,7 @@
 
   </div>
   <fieldset>
-    <%= form_back_button :action => :index%>
+    <%= form_cancel_button :action => :index%>
     <%= form_str_spacer %>
     <%= form_next_button :onclick=>"return new_user_validation(this);" %>
   </fieldset>
